--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+---
 language: node_js
 node_js:
 - '0.10'
@@ -9,10 +10,13 @@ addons:
   sauce_connect: true
 deploy:
   provider: heroku
-  app: movie-database-node
+  app: agilejs-code-red
   api_key:
-    secure: LfX4hB0xQv9z4ZD+Iiz0tffiNceHyB4/wfeFacra7m9xLpjtpqOmBvbQGzl3 3EGek2clup/ri2RHHQm5QCqK5L8ohptvHSoBusghHmXyV80knIb8mlnpmwMe
-      7Vs7v9wdALHudWPHly9pN0OZHxYsRprQc8R6b2rowAdMxzMraDg=
+    secure: ! 'OnXub9+04heE4iU2+pCu+YG1y4n1lAH2QbDywixSj+shoMYUcFz7q1IukMlM
+
+      XWpWIx/g4/Bw6usMSsO4l8Z7lHayEI+vgGp10xmyH360MAbjoNB90ORSiFFL
+
+      FrpYIY+KxhoqzQ+xArai9nKHiZSREjDzy0SI4F+U6RO3fd2Vhhs='
 env:
   global:
   - secure: iFnTOv+kOrBUai/KItEBbAM6WRXV08WSBbE9aJWfO4H7fh3vj9uMO04j+uvlSEbJJSZntbU/nEtJOF/2IHTSyVMCLFP+heNpXhlL0IzFEwWQUQf4dF6Nb+h14UYH6H5eLmCJZG3TktxT3MfChOu+/iIJ3E7HJdS4sXCmgx4K0dI=
